--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,6 +38,16 @@
                                    aria-expanded="false">Catégories <span class="caret"></span></a>
                                 {{ render(controller('App\\Controller\\CategoryController::dropdown')) }}
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('author_new') }}">
+                                    Ajouter un auteur
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('box_index') }}">
+                                    Ajouter les boîtes
+                                </a>
+                            </li>
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
